[project]
name = "todolist"
version = "0.1.0"
description = "An API for a todo list, built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.uv.workspace]
members = ["todolist"]
